Closed Bug 1809061 Opened 3 years ago Closed 3 years ago

minimize/maximize/close button's tooltips are mispositioned after resizing the window

Categories

(Core :: XUL, defect)

Firefox 109
Desktop
Windows 10
defect

Tracking

()

VERIFIED FIXED
111 Branch
Tracking Status
firefox-esr102 --- unaffected
firefox108 --- wontfix
firefox109 --- wontfix
firefox110 --- wontfix
firefox111 --- verified
firefox112 --- verified

People

(Reporter: 6k64x4ma, Assigned: emilio)

References

(Regression)

Details

(Keywords: regression)

Attachments

(2 files)

Attached image screenshot.png

User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:109.0) Gecko/20100101 Firefox/109.0

Steps to reproduce:

  1. Unmaximize the Firefox window.
  2. Hover over the minimize/maximize/close button until the tooltip appears.
  3. Make the window wider.
  4. Hover over the tabstrip where the minimize/maximize/close button used to be.

Actual results:

The tooltip will pop up from wrong position.

Expected results:

The tooltip shouldn't be shown.

mozregression pointed to Bug 1801956 as a regressor,
but the tooltip is not displayed at all from Bug 1790616 until Bug 1801956.

Keywords: regression
OS: Unspecified → Windows 10
Regressed by: 1801956
Hardware: Unspecified → Desktop

:emilio, since you are the author of the regressor, bug 1801956, could you take a look? Also, could you set the severity field?

For more information, please visit auto_nag documentation.

Flags: needinfo?(emilio)

The issue here is that DealWithWindowsAppearanceHacks doesn't run unless
we're actually painting a background because we look at
mDefaultAppearance and nsIFrame only checks HasAppearance.

However this code can be simplified a bit, now that we cleaned up
background propagation in bug 1665476.

Enter in AppendBackgroundItemsToTop unconditionally, and clean up a bit
while at it.

Assignee: nobody → emilio
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true

Set release status flags based on info from the regressing bug 1801956

Flags: needinfo?(emilio)

Set release status flags based on info from the regressing bug 1801956

Pushed by ealvarez@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/5d628737431d Simplify background painting. r=tnikkel,layout-reviewers
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 111 Branch

The patch landed in nightly and beta is affected.
:emilio, is this bug important enough to require an uplift?

  • If yes, please nominate the patch for beta approval.
  • If no, please set status-firefox110 to wontfix.

For more information, please visit auto_nag documentation.

Flags: needinfo?(emilio)

Should probably ride the trains.

Flags: needinfo?(emilio)
Flags: qe-verify+

Reproducible on a 2023-01-20 Nightly build on Windows 10.
Verified as fixed on Firefox 111.0b5(build ID: 20230223185944) and Nightly 112.0a1(build ID: 20230223172038) on Windows 10 and Windows 11.

Status: RESOLVED → VERIFIED
Flags: qe-verify+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: